# byodb

./: CMakeLists.txt  LICENSE  Makefile  README.md
src/: attributes.h  common.cpp  common.h  macro_utils.h  main.cpp  platform.h
src/data/: btree.cpp  btree.h  small_vec.h
